# symphony-rust

./: .gitignore  Cargo.toml  README.md  WORKFLOW.md
.github/workflows/: ci.yml
docs/: TODO.md
examples/: mock_agent.rs  sample_WORKFLOW.md
src/: agent_runner.rs  config.rs  http.rs  logging.rs  main.rs  orchestrator.rs  template.rs  tracker.rs  types.rs  workspace.rs
