[package]
name = "symphony"
version = "0.1.0"
edition = "2024"
description = "Symphony: an orchestrator that turns an issue tracker into a control plane for long-running coding agents"
license = "MIT"
repository = "https://github.com/openai/symphony"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
liquid = "0.26"
liquid-lib = "0.26"
reqwest = { version = "0.12", features = ["json"] }
notify = { version = "6", features = ["macos_kqueue"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
async-trait = "0.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
dirs = "5"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"

[features]
default = []
mock-mode = []

[[bin]]
name = "symphony"
path = "src/main.rs"

[[example]]
name = "mock_agent"
path = "examples/mock_agent.rs"
